# pycoffi

./: .gitignore  CITATION.cff  LICENSE  README.md  env_floodstan.yml  env_mypackage.yml  env_pycoffi.yml  pyproject.toml
.github/workflows/: python-package-conda.yml
data/: stations.csv
data/covariate/: 110003_covariate_ams_data_v5.0.csv  111101_covariate_ams_data_v5.0.csv  120002_covariate_ams_data_v5.0.csv  132001_covariate_ams_data_v5.0.csv  138001_covariate_ams_data_v5.0.csv  138107_covariate_ams_data_v5.0.csv  143303_covariate_ams_data_v5.0.csv  145102_covariate_ams_data_v5.0.csv  208003_covariate_ams_data_v5.0.csv  208006_covariate_ams_data_v5.0.csv  208007_covariate_ams_data_v5.0.csv  210014_covariate_ams_data_v5.0.csv  210022_covariate_ams_data_v5.0.csv  212008_covariate_ams_data_v5.0.csv  215002_covariate_ams_data_v5.0.csv  215004_covariate_ams_data_v5.0.csv  219001_covariate_ams_data_v5.0.csv  222202_covariate_ams_data_v5.0.csv  223202_covariate_ams_data_v5.0.csv  224203_covariate_ams_data_v5.0.csv  226204_covariate_ams_data_v5.0.csv  230204_covariate_ams_data_v5.0.csv  235202_covariate_ams_data_v5.0.csv  401201_covariate_ams_data_v5.0.csv  401210_covariate_ams_data_v5.0.csv  401216_covariate_ams_data_v5.0.csv  403205_covariate_ams_data_v5.0.csv  (+12 more)
scripts/: figure1_site_map.py  figure2_data_timeseries.py  figure3_posterior_predictive_checks.py  figure4_frequency_plot.py  figure5_equivalent_record_length.py  figure6_predictive-checks_maps.py  figure7_discrepancy_stats.py  figure8_explain_gains.py  figure9_impact_record_length.py
tests/: test_datahub.py
(+8 files in other folders)
