[build-system]
requires = [
    "setuptools >= 64",
    "numpy >= 1.20.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pycoffi"
authors = [{name = "Julien Lerat, CSIRO Environment", email="julien.lerat@csiro.au"}]
description = "Scripts and data supporting the CoFFI paper"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["data processing", "rainfall", "streamflow", "rainfall-runoff", "hydrology"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python 3",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Hydrology"
]    
requires-python = ">= 3.8"
dependencies = [
    "numpy >= 1.20.0",
    "scipy >= 1.0.0",
    "pandas >= 2.0.0"
]
